--- a/src/core/todo.cfg
+++ b/src/core/todo.cfg
@@ -77,3 +77,4 @@ export REPORT_FILE="$TODO_DIR/report.txt"
 # just before the list output is displayed.
 #
 # export TODOTXT_FINAL_FILTER='cat'
+# export TODOTXT_VERBOSE=0;
